# demo-bbl-secu

./: .gitignore  Makefile  Readme.md  deploy.ps1
.github/workflows/: azure-static-web-apps-agreeable-beach-0cf834203.yml  deploy-functionapp.yml  deploy-static-web-app.yml
app-cli/: .env  Dockerfile  app.go  go.mod  go.sum  sp.example.json
backend/: .dockerignore  CMakeLists.txt  Dockerfile  Readme.md  init_container.sh
backend/.github/workflows/: push-to-acr.yml
backend/include/: cat-api.h  mjson.h  mongoose.h
backend/src/: cat-api.c  main.c
demo-script/: Makefile  a.txt  b.txt  déroulé.txt  patch.xdelta  script.md  script.txt  todo.txt
deploy/: main.tf  output.tf  variables.tf
frontend/: .env.auth  .env.authkv  .env.public  .gitignore  Dockerfile  README.md  azure-pipelines.yml  deploy.json  nginx.conf  package.json  staticwebapp.config.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.vue  inversify.config.ts  main.ts  router.ts  store.ts  types.ts
frontend/src/@types/: admin.service.d.ts  auth.service.d.ts  backend.service.d.ts  enums.ts  shims-barcode-reader.d.ts
frontend/src/components/: CouponCreator.vue  CouponViewer.vue
frontend/src/layouts/: Default.vue
frontend/src/pages/: Admin.vue  ClothesSales.vue  NoWaste.vue  Promos.vue
frontend/src/services/: admin.service.ts  app-service.auth.service.spec.ts  auth.service.ts  backend.service.spec.ts  (+1 more)
function-keyvault-relay/: package-lock.json  package.json
function-keyvault-relay/GetRoles/: index.ts
function-keyvault-relay/keyvault-relay/: function.json  index.ts
(+6 files in other folders)
